--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-formulario-grupo-empresa.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-formulario-grupo-empresa.xhtml
@@ -14,8 +14,8 @@
                                 <ui:include src="componente/cpt-formulario-identificacion.xhtml"/>
                             </p:tab>
 
-                            <p:tab id="relacion" title="Relación">
-                                <ui:include src="componente/cpt-formulario-relacion.xhtml"/>
+                            <p:tab id="relacion" title="Contacto">
+                                <ui:include src="componente/cpt-formulario-contacto.xhtml"/>
                             </p:tab>
 
                             <p:tab id="historia" title="Historia">
