--- a/GrupoEmpresarial-war/web/interfaz/usuario/ventana/vta-acceso-sistema.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/usuario/ventana/vta-acceso-sistema.xhtml
@@ -6,7 +6,7 @@
     xmlns:ui="http://java.sun.com/jsf/facelets">
     
     <h:head>
-        <title>Acceso al Sistema</title>
+        <title>Ingreso a la plataforma</title>
         <style type="text/css">
             .ui-widget {
                 font-size: 90%;
